Update pub refs and correct typos.

--- a/_pages/research.html
+++ b/_pages/research.html
@@ -5,10 +5,9 @@ permalink: /research/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap"><p>You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</p>
-  <p><strong>&dagger;</strong>: First author, <strong>&Dagger;</strong>: Corresponding author</p></div>
-{% endif %}
+<div class="wordwrap">
+  <p>&dagger;: Contributed equally, &Dagger;: Corresponding author(s).</p>
+</div>
 
 {% include base_path %}
 
